--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,6 @@
     <dimen name="login_margin_start">0dp</dimen>
     <dimen name="login_margin_end">0dp</dimen>
 
+    <dimen name="script_item_padding_top">8dp</dimen>
+
 </resources>
