--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="@dimen/activity_default_margin"
     android:paddingEnd="@dimen/activity_default_margin"
     android:background="@drawable/login_gradient_background">
 
@@ -19,6 +20,7 @@
             android:layout_width="@dimen/login_icon_width"
             android:layout_height="@dimen/login_icon_height"
             android:layout_gravity="center"
+            android:contentDescription="@string/promptastic_logo_content_description"
             android:src="@drawable/promptastic_name"/>
 
         <ProgressBar
