--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_about_logo"
         android:layout_width="@dimen/login_icon_width"
         android:layout_height="@dimen/login_icon_height"
-        android:layout_marginTop="16dp"
+        android:contentDescription="@string/promptastic_logo_content_description"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_about_name"
         app:layout_constraintVertical_chainStyle="packed"
