--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:layout_width="@dimen/login_icon_width"
         android:layout_height="@dimen/login_icon_height"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/promptastic_logo_content_description"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
