--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -45,6 +45,7 @@
             android:id="@+id/et_login_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/cabin_sketch"
             android:hint="@string/edit_text_login_user_name"
             android:inputType="textAutoComplete" />
 
@@ -52,6 +53,7 @@
             android:id="@+id/et_login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/cabin_sketch"
             android:layout_marginTop="@dimen/login_edit_text_top_margin"
             android:hint="@string/edit_text_login_password"
             android:inputType="textPassword" />
@@ -62,6 +64,7 @@
             android:layout_height="wrap_content"
             android:text="@string/login_button_text"
             android:layout_marginTop="@dimen/login_button_top_margin"
+            android:fontFamily="@font/cabin_sketch"
             android:background="@drawable/button_background"
             android:textColor="@color/button_text_color" />
 
@@ -74,6 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/cabin_sketch"
                 android:text="@string/login_new_user"
                 android:layout_marginEnd="@dimen/login_sign_up_end_margin"/>
 
@@ -81,6 +85,7 @@
                 android:id="@+id/tv_signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/cabin_sketch"
                 android:focusable="true"
                 android:clickable="true"
                 android:autoLink="all"
